# tintin

./: .gitignore  .travis.yml  README.md  configure.ac
src/: Makefile.am  cursor.c  files.c  main.c  system.c  tables.c  tintin.h
