bin_PROGRAMS = tt++

tt___SOURCES = \
    action.c alias.c files.c help.c highlight.c strhash.c llist.c log.c \
    main.c misc.c net.c parse.c path.c update.c history.c tab.c vt102.c \
    terminal.c session.c function.c text.c substitute.c tick.c telopt.c \
    math.c split.c debug.c tinexp.c mapper.c tables.c buffer.c prompt.c \
    class.c  event.c utils.c chat.c macro.c config.c gag.c variables.c \
    array.c input.c cursor.c memory.c system.c line.c tokenize.c tintin.h \
    telnet.h
